@@ -1,6 +1,6 @@
 Name: octcdf
-Version: 1.1.7
-Date: 2014-02-17
+Version: 1.1.8
+Date: 2015-03-10
 Author: Alexander Barth <barth.alexander@gmail.com>
 Maintainer: Alexander Barth <barth.alexander@gmail.com>
 Title: octcdf
