@@ -143,8 +143,9 @@ public:
 private:
   ncatt_t* nca;
 
-
+#ifdef DEFINE_OCTAVE_ALLOCATOR
   DECLARE_OCTAVE_ALLOCATOR 
+#endif
   DECLARE_OV_TYPEID_FUNCTIONS_AND_DATA
 };
 
